# Vaelorium

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  PROJECT_OUTLINE.md  README.md  index.html  install-deps.sh  mempalace.yaml  package-lock.json  package.json  vite.config.ts
.claude/brainstorms/: 2026-04-10-kanka-clone-brainstorm.md  2026-04-10-kanka-clone-research.md  2026-04-10-naming-candidates.md
.claude/hooks/: mempal_precompact_hook.sh  mempal_save_hook.sh
.claude/plans/: 2026-04-10-foundation-and-wiki-engine.md  2026-04-10-m1-gap-analysis.md  2026-04-11-m2-entity-type-system.md  2026-04-11-m2-phase1-data-layer.md  2026-04-11-m2-phase2-type-selector.md  2026-04-11-m2-phase5-page-embeds.md  2026-04-11-m25-tomes.md  (+1 more)
.githooks/: pre-commit
.planck/: config.toml
docs/: sync-manual-testing.md  sync-s3-testing.md  sync-user-guide.md
e2e/: backlinks.spec.ts  entity-fields.spec.ts  entity-list.spec.ts  entity-types.spec.ts  helpers.ts  icon-picker.spec.ts  keybinds.spec.ts  mentions.spec.ts  page-embeds.spec.ts  read-mode.spec.ts  relations.spec.ts  rename-updates-mentions.spec.ts  settings.spec.ts  slash-commands.spec.ts  tags.spec.ts  tomes.spec.ts  version-history.spec.ts  wiki-engine.spec.ts  wiki-link-syntax.spec.ts
playwright-report/: index.html
scripts/: bump-version.mjs  check-architecture-docs.sh  check-versions.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_wiki_engine.sql  002_entity_types.sql  003_tome_metadata.sql  004_images.sql  005_relations.sql  006_maps.sql  007_timelines.sql  008_boards.sql  009_sync.sql  010_sync_app_global.sql  011_device_name_app_global.sql  012_sync_activity.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  boards.rs  cloud.rs  entity_fields.rs  entity_types.rs  export.rs  field_values.rs  images.rs  import_data.rs  maps.rs  mod.rs  pages.rs  relations.rs  search.rs  sync.rs  sync_dev.rs  tags.rs  timelines.rs  tomes.rs  versions.rs  wiki_links.rs
src-tauri/src/commands/backup/: config.rs  delete.rs  mod.rs  restore.rs  unlock.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/sync/: activity.rs  app_backend.rs  conflict.rs  crypto.rs  engine.rs  journal.rs  keychain.rs  mod.rs  registry.rs  remote_meta.rs  runner.rs  session.rs  snapshot.rs  state.rs  tome_identity.rs
src-tauri/src/sync/backend/: filesystem.rs  mod.rs  prefixed.rs  s3.rs
src-tauri/src/sync/backend/hosted/: backend.rs  crypto.rs  mod.rs  protocol.rs
src-tauri/tests/: hosted_auth.rs  hosted_backend.rs  snapshot_bench.rs  sync_integration.rs  sync_s3_smoke.rs
(+166 files in other folders)
